tests/ui-fulldeps/pathless-extern-unstable.stderr
error[E0658]: use of unstable library feature 'crablangc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/pathless-extern-unstable.rs:7:9
   |
LL | pub use crablangc_middle;
   |         ^^^^^^^^^^^^
   |
   = note: see issue #27812 <https://github.com/crablang/crablang/issues/27812> for more information
   = help: add `#![feature(crablangc_private)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
